# cast_deploy

./: .gitignore  alembic.ini  commandlines.txt  debug.py  main.py  pyproject.toml  sample.sh  setup.cfg  test.db
backend/: auth.py  config.py  crud.py  database.py  main.py  models.py  repository.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: da154e00f112_initial_migration.py  e26c8282cff2_removed_email_added_username.py  f57acc805ab9_removed_email_added_username.py
backend/templates/: deploy.html
backend/tests/: conftest.py  test_api.py  test_auth.py  test_cast_deploy.py
deployable/: config.py  crud.py  main.py  schemas.py
deployable/alembic/: deployable  env.py
frontend/: package.json
frontend/src/: App.vue  main.js  main.ts
frontend/src/api/: index.ts
frontend/src/components/: DeploymentList.vue
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Login.vue
notebooks/: create_test_database.ipynb  fritz.ipynb  repository.ipynb  tests.ipynb
notebooks/.ipynb_checkpoints/: tests-checkpoint.ipynb
templates/: deploy.html
