[tool.poetry]
name = "deployable"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.61.2"}
black = "^20.8b1"
pgcli = "^3.0.0"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
databases = {extras = ["postgresql"], version = "^0.4.1"}
jupyter = "^1.0.0"
nb-black = "^1.0.7"
python-multipart = "^0.0.5"
asyncpg = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
bpython = "^0.20.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DATABASE_URL = "sqlite:///./test.db"
minversion = "6.0"
addopts = "--reuse-db -p no:warnings"
testpaths = [
    "backend/tests",
]