[tool.poetry]
name = "deployable"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.61.2"}
black = "^20.8b1"
pgcli = "^3.0.0"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
databases = {extras = ["sqlite"], version = "^0.4.1"}
jupyter = "^1.0.0"
nb-black = "^1.0.7"
python-multipart = "^0.0.5"
asyncpg = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.16.1"
coverage = "^5.3.1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
bpython = "^0.20.1"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-asyncio = "^0.14.0"

[tool.black]
line-length = 120
exclude = "alembic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p no:warnings"
testpaths = [
    "backend/tests",
]

[tool.coverage.run]
include = [
    "backend/*"
]
omit = [
    "*alembic*",
    "*tests*",
]
