[tool.poetry]
name = "deployable"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "*"}
black = "^20.8b1"
pgcli = "^3.0.0"
pydantic = {extras = ["dotenv"], version = "*"}
SQLAlchemy = "*"
alembic = "*"
databases = {extras = ["sqlite"], version = "*"}
jupyter = "*"
nb-black = "*"
python-multipart = "*"
asyncpg = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
httpx = "*"
coverage = "*"
flake8 = "*"
isort = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
bpython = "*"
black = {version = "*", allow-prereleases = true}
pytest-asyncio = "*"

[tool.black]
line-length = 120
exclude = "alembic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p no:warnings"
testpaths = [
    "backend/tests",
]

[tool.coverage.run]
include = [
    "backend/*"
]
omit = [
    "*alembic*",
    "*tests*",
]

[tool.isort]
profile = "black"
src_paths = ["backend"]
skip = ["alembic"]
